--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Otávio | Desenvolvedor Web</title>
+  <title>Otávio | Desenvolvedor</title>
   <link rel="stylesheet" href="/style.css">
   <script src="/js/scripts.js"></script>
+  <link rel="icon" type="image/png" href="images/ace6a557671876677cedbd2e3a13be56.jpg">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script type="module" src="/js/scripts.js"></script>
 
 </head>
@@ -14,8 +16,6 @@
     <header>
         <nav class="navbar">
           <ul class="nav-menu">
-            <li><a href="#inicio">Início</a></li>
-            <li><a href="#sobre">Sobre</a></li>
             <li><a href="#curriculo">Currículo</a></li>
             <li><a href="#projetos">Projetos</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
@@ -28,10 +28,10 @@
   <br>
 
   <main>
-    <!-- Introdução -->
+
     <section class="section" id="introducao">
         <div class="card">
-            <img src="/images/Screenshot_20250411_001211_Gallery.jpg" alt="Minha Foto de Perfil" />
+            <img src="/images/selfie.jpg" alt="Minha Foto de Perfil" />
             <h3>Boas Vindas ao meu Portfólio!</h3>
             <p id="introducao">Meu nome é Otávio Vianna Lima e nasci em 2004. <br>
                 Atualmente estou cursando Desenvolvimento de Software Multiplataforma na Fatec São José dos Campos. 
@@ -61,7 +61,6 @@
       
       
 
-    <!-- Projetos -->
     <section class="section" id="projetos">
       <h2>Projetos</h2>
       <div class="grid">
@@ -112,15 +111,17 @@
       </section>
       
 
-    <!-- Trabalhos e Publicações -->
-    <section class="section" id="trabalhos-publicacoes">
+    <section class="section" id="trabalhos">
         <h2>Trabalhos Acadêmicos</h2>
         <div class="card">
-            <h3>Trabalho de conclusão de curso (TCC - 2022)</h3>
+            <h3>Trabalho de conclusão de curso (TCC)</h3>
             <p> Título: "A presença do cyberbullying contra as mulheres nos ambientes onlines"</p>
             <p> Resumo: Neste trabalho pesquisamos dados e entrevistas sobre a taxa de cyberbullying contra as mulheres em ambientes onlines.</p>
             <p> Resultados: Conseguimos dados e estátisticas mostrando o quanto as mulheres infelizmente são alvo em ambientes onlines e também pontuamos refêrencias femininas que possuem muito impacto nas redes sociais..</p>
           </div>
+
+        
+
     </section>
 
     <section class="section" id="Certificações">
@@ -143,14 +144,24 @@
             <p>Certificado Escola de Inovadores</p>
           </div>
         </div>
-
-    <!-- Contato -->
-    <section class="section" id="contato">
-      <h2>Contato</h2>
-      <p>Email: otavio@exemplo.com</p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/otavio">linkedin.com/in/otavio</a></p>
-      <p>GitHub: <a href="https://github.com/otavio">github.com/otavio</a></p>
-    </section>
+        
+        <br>
+        
+        <section class="section" id="contato">
+          <h2>Contato</h2>
+          <div class="icones-contato">
+            <a href="mailto:otavioviannalima@gmail.com" target="_blank" title="Email">
+              <i class="fas fa-envelope fa-10x"></i>
+            </a>
+            <a href="www.linkedin.com/in/otávio-vianna-lima-1b26a932a" target="_blank" title="LinkedIn">
+              <i class="fab fa-linkedin fa-10x"></i>
+            </a>
+            <a href="https://github.com/tuzzooz" target="_blank" title="GitHub">
+              <i class="fab fa-github fa-10x"></i>
+            </a>
+          </div>
+        </section>
+        
   </main>
   
 
